# CosRayModifiedISO

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  testRunning.py
.github/: dependabot.yml
.github/workflows/: dependency-review.yml  python-package.yml  python-publish.yml
CosRayModifiedISO/: CosRayModifiedISO.py
CosRayModifiedISO/internalFunctions/: importingNMdata.py  miscellaneous.py  pythonModifiedISO.py  rigidityEnergyConversionFunctions.py  spectrumHandling.py
CosRayModifiedISO/neutronMonitorData/: OULUinputData.pkl
DLRISOmodel/: DLRISOmodel.py
DLRISOmodel/internalFunctions/: importingNMdata.py  miscellaneous.py  pythonDLRISO.py  rigidityEnergyConversionFunctions.py  spectrumHandling.py
tests/: test_DLRISOmodel.py
