[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "CosRayModifiedISO"
version = "1.2.11"
description = "A Python library for acquiring galactic cosmic ray spectra at Earth from the ISO model as modified by DLR. All the details and equations about this model can be found in Matthiae et al., A ready-to-use galactic cosmic ray model, Advances in Space Research 51.3 (2013): 329-338, https://doi.org/10.1016/j.asr.2012.09.022 ."
readme = "README.md"
license = { text = "CC BY-NC-SA 4.0" }
requires-python = ">=3.8"
authors = [
    { name = "Space Environment and Protection Group, University of Surrey" }
]
keywords = ["space physics", "galactic cosmic ray"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "importlib_resources>=5.10.0",
    "numba>=0.56.4",
    "numpy>=1.21.6",
    "pandas>=1.3.5",
]

[project.urls]
Homepage = "https://github.com/ssc-maire/CosRayModifiedISO"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["CosRayModifiedISO"]
